<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/login_bkg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_v_.2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_v_.8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_h_.35"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/iv_Logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/g_h_.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_Rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_rank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Logo"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <ImageView
        android:id="@+id/iv_Language"
        android:src="@drawable/icon_language"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.2"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/tv_Language"/>
    <TextView
        android:id="@+id/tv_Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/tv_Rank"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/s_language"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.8"

        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/tv_Language" />
    <ImageView
        android:id="@+id/iv_Email"
        android:src="@drawable/email_search_outline"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.2"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/tv_Email"/>
    <TextView
        android:id="@+id/tv_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/s_language"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.8"
        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/tv_Email" />
    <ImageView
        android:id="@+id/iv_Password"
        android:src="@drawable/lock_question"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.2"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/tv_Password"/>
    <TextView
        android:id="@+id/tv_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/et_Email"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/g_v_.8"
        app:layout_constraintStart_toStartOf="@id/g_v_.2"
        app:layout_constraintTop_toBottomOf="@id/tv_Password"
        />

<!--        <Button-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="45dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            android:layout_marginBottom="100dp"-->
<!--            android:text="@string/login"-->
<!--            android:background="@drawable/style_button"-->
<!--            android:backgroundTint="@color/white"-->
<!--            />-->
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/enter_btn"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/email"-->
<!--        android:textColorHint="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="@id/g_v_.8"-->
<!--        app:layout_constraintStart_toStartOf="@id/g_v_.2"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv_Email">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/mi_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="35dp"-->
<!--            android:backgroundTint="#03FFFFFF"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="16sp"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->



</androidx.constraintlayout.widget.ConstraintLayout>